@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-10-16T01:45:03Z",
+  "timestamp" : "2024-10-17T01:43:49Z",
   "count_outdated" : 8326,
   "uniques_outdated" : 3759,
-  "count" : 8331,
-  "uniques" : 3764,
+  "count" : 8337,
+  "uniques" : 3770,
   "clones" : [
     {
       "timestamp": "2024-10-03T00:00:00Z",
@@ -40,6 +40,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-16T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "count_decinc": [ 0, 6 ],
+      "uniques": 6,
+      "uniques_minmax": [ 6, 6 ],
+      "uniques_decinc": [ 0, 6 ]
     }
   ]
 }
