@@ -1,6 +1,6 @@
 {
-  "count": 5,
-  "uniques": 3,
+  "count": 11,
+  "uniques": 9,
   "clones": [
     {
       "timestamp": "2024-10-03T00:00:00Z",
@@ -21,6 +21,11 @@
       "timestamp": "2024-10-08T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2024-10-16T00:00:00Z",
+      "count": 6,
+      "uniques": 6
     }
   ]
 }
