@@ -1,3 +1,12 @@
+2024-10-17T01:43:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11376811609 # 592
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-17
+* notice: last 14d: unq all: 9 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 3759 8326 / 3764 8331
+* notice: next accum: outdated-unq outdated-all / unq all: 3759 8326 / 3770 8337
+* notice: prev exec diff / last date diff / accum: unq all: +6 +6 -0 -0 / +6 +6 -0 -0 / 6 6
+* notice: removed / changed dates: [] / [2024-10-16]
+
 2024-10-16T01:45:03Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11357356333 # 590
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-16
